# qmk_port_ch582

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.zh-cn.md  VSCODE_DEVELOPMENT.md  build.sh  fullclean.sh  keyboard_target.cmake  linux_build.sh  linux_fullclean.sh
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: build_keyboard.yml
APP/: Main.bak  broadcast.c  devinfoservice.c  hid_custom_keyboard_template.bak  hidkbd.c  hidkbd_main.c
APP/inc/: HuckAL.h  broadcaster.h  devinfoservice.h
APP/include/: hidkbd.h
BLE_LIB/: CH58xBLE_LIB.h  CH58xBLE_ROM.H  CH58xBLE_ROM.h  CH58xBLE_ROM.hex
CherryUSB_porting/: CherryUSB.cmake  usb_config.h  usb_porting.c  usb_porting.h
HAL/: KEY.c  LED.c  RTC.c  SLEEP.c
HAL/include/: LED.h  SLEEP.h  config.h
Profile/: battservice.c  devinfoservice.c  hiddev.c  hidkbdservice.c  scanparamservice.c
Profile/include/: battservice.h  devinfoservice.h  hiddev.h  hidkbdservice.h  scanparamservice.h
RVMSIS/: core_riscv.c
StdPeriphDriver/: CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_i2c.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart2.c  CH58x_usb2hostBase.c  CH58x_usb2hostClass.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
StdPeriphDriver/inc/: CH58x_clk.h  CH58x_common.h  CH58x_flash.h  CH58x_gpio.h  CH58x_pwm.h  CH58x_spi.h  CH58x_sys.h  CH58x_timer.h  CH58x_uart.h  CH58x_usbhost.h  ISP583.h
USB_LIB/: CHRV3UFI.h  CHRV3UF_README.TXT
mcuboot_porting/: mcuboot_port.c
mcuboot_porting/flash_map_backend/: flash_map_backend.h
mcuboot_porting/mbedtls/: mbedtls_config.h
mcuboot_porting/mcuboot_config/: mcuboot_assert.h  mcuboot_config.h  mcuboot_logging.h
mcuboot_porting/os/: os_malloc.h
mcuboot_porting/sysflash/: sysflash.h
qmk_porting/: common_features.cmake  default_rules.cmake  disable_features.cmake  qmk_porting.cmake  quantum.cmake  tmk_core.cmake
qmk_porting/drivers/: battery.c  battery_measure.c  rgb_led.h  ws2812.c  ws2812.h  ws2812_spi.c
qmk_porting/drivers/aw20216/: aw20216.c  aw20216_supplement.c  aw20216_supplement.h
qmk_porting/drivers/aw20216s/: aw20216s_supplement.c  aw20216s_supplement.h
qmk_porting/drivers/ws2812/: ws2812.h  ws2812_pwm.c  ws2812_spi.c  ws2812_supplement.c  ws2812_supplement.h
qmk_porting/keyboards/: ble_config.h  halconf.h  info.json  keyboard_target.cmake  mcuconf.h  mk01.c  mk01.h  mk02.h  qmk_config.h  rules.cmake  rules.mk
qmk_porting/keyboards/AM78/: AM78.c  AM78.h  info.json  qmk_config.h  rules.cmake
qmk_porting/keyboards/AM78-2/: AM78-2.c  info.json  qmk_config.h  rules.cmake
qmk_porting/keyboards/ClassPad/: ClassPad.c  ClassPad.h  halconf.h  info.json  mcuconf.h  qmk_config.h  rules.cmake
qmk_porting/keyboards/EC61/: EC61.c  EC61.h  info.json  qmk_config.h  rules.cmake
qmk_porting/keyboards/EC61-K/: EC61-K.c  EC61-K.h  info.json  qmk_config.h  rules.cmake
qmk_porting/keyboards/Melting65/: Melting65.c  Melting65.h  (+2 more)
qmk_porting/protocol/: auxiliary_rgb.c  auxiliary_rgb.h  ble_descriptor.c  ble_descriptor.h  ble_keycode.c  ble_keycode.h  compile_date.h  dynamic_lighting.c  dynamic_lighting.h  eventhandler_usb.h  extra_indicator.c  extra_indicator.h  extra_keycode.c  extra_keycode.h  openRGB.c  openrgb.c  openrgb.h  pre_handler.h  protocol.c  protocol.h  protocol_usb.c  protocol_usb.h  rgb_matrix_kb.inc  signalrgb.c  signalrgb.h  usb_descriptor.h  usb_descriptors.h  usb_interface.c  usb_interface.h  usb_main.c  usb_main.h  usb_util.c
sdk/: CMakeLists.txt  riscv.cmake
sdk/BLE_LIB/: CH58xBLE_LIB.H  CH58xBLE_LIB.h  CH58xBLE_ROM.H  CH58xBLE_ROM.h  CH58xBLE_ROM.hex  CH58xBLE_ROMx.hex
sdk/HAL/: KEY.c  LED.c  MCU.c  RTC.c  SLEEP.c
sdk/HAL/include/: HAL.h  KEY.h  LED.h  RTC.h  SLEEP.h  config.h
sdk/LWNS/: WCH_LWNS_LIB.h
sdk/Ld/: Link.ld  Link_APP.ld  Link_IAP.ld
sdk/MESH_LIB/: CH58xBLE_ROM_MESH.hex  MESH_LIB.h
sdk/RVMSIS/: core_riscv.c  core_riscv.h
sdk/Startup/: startup_CH583.S  startup_CH583_IAP.S
sdk/StdPeriphDriver/: CH58x_adc.c  CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_i2c.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer2.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CH58x_usb2dev.c  CH58x_usb2hostBase.c  CH58x_usb2hostClass.c  CH58x_usbdev.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
sdk/StdPeriphDriver/inc/: CH583SFR.h  CH58x_adc.h  CH58x_clk.h  CH58x_common.h  CH58x_flash.h  CH58x_gpio.h  CH58x_pwm.h  CH58x_pwr.h  CH58x_spi.h  CH58x_sys.h  CH58x_timer.h  CH58x_uart.h  CH58x_usbdev.h  CH58x_usbhost.h  ISP583.h
sdk/USB_LIB/: CH583UFI.c  CHRV3UFI.h
utils/: uf2conv.py  uf2families.json
utils/WCHISPTool_CMD/: README.md
utils/nrf-command-line-tools-10.19.0_linux-amd64/: LICENSE.rtf  mergehex_release_notes.txt  nrfjprog_release_notes.txt
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/: LICENSE  README.md  setup.cfg  setup.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/: API.py  APIError.py  Hex.py  HighLevel.py  JLink.py  LowLevel.py  MultiAPI.py  Parameters.py  RTTAsyncIO.py  __init__.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/docs/: __init__.py  nrfjprogdll.h
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/examples/: __init__.py  highlevel_memory_read_write.py  highlevel_program_hex.py  memory_read_write.py  nrf9160_pca20035_modem_upgrade_over_serial.py  program_hex.py  python_help.py  rtt_asyncio.py  rtt_callback.py  rtt_synchronous.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/examples/hex_files/: __init__.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/lib_arm64/: __init__.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/lib_armhf/: __init__.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/lib_x64/: __init__.py
utils/nrf-command-line-tools-10.19.0_linux-amd64/python/pynrfjprog/lib_x86/: __init__.py
utils/riscv-none-elf-gcc/: README.md
(+556 files in other folders)
