[metadata]
description = A simple Python interface for the nrfjprog functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.nordicsemi.com/
license = Nordic 5-clause License

author = Nordic Semiconductor ASA
author_email = sagtools@nordicsemi.no

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Embedded Systems
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

keywords = nrfjprog pynrfjprog highlevelpynrfjprog

[options]
python_requires = >=3.7
install_requires = 
    future
    tomli-w
packages = find:

